--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="project3.css">
 </head>
-<body>
+<body data-bs-spy="scroll" data-bs-target="#navbar-site">
 <!--header-->
 <div class="name p-5  text-dark text-center">
 
@@ -64,10 +64,10 @@
 
       <h2 class="subtitle" id="home">Fatematun Nusrat</h2>
       <div class="IntroImage text-center">
-<img src="img.jpeg" alt="" title="Fatematun NUSRAT" class="rounded-circle">
+<img src="image/img.jpeg" alt="" title="Fatematun NUSRAT" class="rounded-circle" >
       </div>
 <!--intro paragraph-->
-      <p class="major">Future Developer</p>
+      <p class="major">Future Engineer</p>
 
 <i class="department">Department of Information Technology</i>
 
@@ -76,7 +76,7 @@
       <h2>Little about me</h2>
 
 
-      <p>My name is Fatematun Nusrat. My major is Internet and information techology in QCC. This is my first semester in college. </p>
+      <p>My name is Fatematun Nusrat. My major is Internet and information techology in QCC. This is my first semester in college.My plan for after college is to go in 4 year college NewYork City College for Techonology to do my Bachelor's Degree.This is the only college in cuny has Information Techology major and as I cann't afford private college so I have to in cuny.Also I want to take a job after finishing my college. </p>
 
 
     </div>
@@ -89,11 +89,11 @@
 
 <div class=" container-fluid row">
 
-  <!-- card 1 for project 1 -->   <section class="col-lg-5 col-md-5 "  style="margin:1%; "  >
+  <!-- card 1 for project 1 -->   <section class="sec1 col-lg-5 col-md-5 "  style="margin:1%; "  >
   <button type="button" class="btn1 btn" data-bs-toggle="modal" data-bs-target="#item1">
 
     <div class="card-body">
-      <img src="img.jpg.jpg" alt="" tilte=" " class="card-img">
+      <img src="image/coxbazar.png" alt="" tilte=" " class="card-img">
         </div>
     <div class="card-footer">
 
@@ -103,11 +103,11 @@
   </button>  </section >
     <!-- card 2 for project 1 -->
 
-    <section class="col-lg-5 col-md-5 "  style="margin:1%; "  >
+    <section class=" sec2 col-lg-5 col-md-5 "  style="margin:1%; "  >
     <button type="button" class="btn1 btn" data-bs-toggle="modal" data-bs-target="#item2">
 
       <div class="card-body">
-        <img src="img.jpg.jpg" alt="" tilte=" " class="card-img">
+        <img src="image/respect.png" alt="respect" tilte=" respect" class="card-img">
           </div>
       <div class="card-footer">
 
@@ -135,7 +135,7 @@
 
  <div style="text-align:center;" class="padding">
 
-<img  text-align="center;" src="img.jpg.jpg" alt="HTML project Dreaming place" title="HTML project Dreaming place" class="image1" >
+<img  text-align="center;" src="image/coxbazar.png" alt="HTML project Dreaming place" title="HTML project Dreaming place" class="image1" >
 <p class="padding"  style="text-align:left;"> Project 1 consists  in creating an informative website. The information of the website is about a place (city,country or state) where you want to inform people about that place. In your website you should have to present for information about the place  such as :</p>
 <ul style="text-align:left;">
   <li>Where is the place and why it is a famous place</li>
@@ -143,7 +143,7 @@
     <li> Important things and location of the place</li>
       <li>Show pictures of the place</li>
 </ul>
-<p style="text-align:left;"> <a href="#"> Visit my <b> Cox's bazar </b> project   </a>            </p>
+<p style="text-align:left;"> <a href="https://qccfatema.github.io/project1/"> Visit my <b> Cox's bazar </b> project   </a>            </p>
 </div>
 <!--modal footer card 1 -->
 <div class="modal-footer">
@@ -172,10 +172,10 @@
 
  <div style="text-align:center;" class="padding">
 
-<img  text-align="center;" src="img.jpg.jpg" alt="HTML project Dreaming place" title="HTML project Dreaming place" class="image1" >
+<img  text-align="center;" src="image/respect.png" alt="HTML project Dreaming place" title="HTML project Dreaming place" class="image1" >
 <p class="padding"  style="text-align:left;"> Project idesign consists  of student creating graphic memories using web technology. This grapic memory has the purpose of self reflecting on the difficulties that each technological Engineering student has or is facing with discrimination of any kind.It can also illustrate the process that each student is going throught to overcome difficulties in him/her professional development</p>
 
-<p style="text-align:left;"> <a href="#"> Visit my <b> Respect us too! </b> project   </a>            </p>
+<p style="text-align:left;"> <a href="https://qccfatema.github.io/project2/"> Visit my <b> Respect us too! </b> project   </a>            </p>
 </div>
 <!--modal footer -->
 <div class="modal-footer">
@@ -193,13 +193,13 @@
 <div class=" container-fluid row">
   <!--card 1 for class activity html-->
   <section class="card   col-lg-3 col-md-5 "   <p class="card-subtitle"></p>
-    <img src="img.jpg.jpg" alt="image of cat" tilte="Professor Wu " class="card-img">
+    <img src="image/image.png" alt="image of girl" tilte="girl with computer" class="card-img">
     <div class="card-header">
     <p class="card-title"><b class="bold1">HTML</b> <br>  <b> Class Activities </b></p>
 
     <p class="card-subtitle"> At the beginning of the course I learned to create stucture using only HTML.</p>
 <hr>
-    <p class="card-subtitle">1.Html Basic</p>
+    <p class="card-subtitle"> <a href="activities/activities2/classactivity.html" target="_blank">1.Html Basic </a></p>
 
       <p class="card-subtitle text-light"> g</p>
   <p class="card-subtitle text-light"> g</p>
@@ -216,17 +216,17 @@
 
 <!--card2 for class activity css -->
 <section class="card   col-lg-3 col-md-5 "   <p class="card-subtitle"></p>
-  <img src="img.jpg.jpg" alt="image of cat" tilte="Professor Wu " class="card-img">
+  <img src="image/image2.png" alt="image of girl" tilte="girl with laptop" class="card-img">
   <div class="card-header">
   <p class="card-title"><b class="bold1">CSS </b> <br>  <b> Class Activities </b></p>
 
   <p class="card-subtitle"> After we learned how to build a HTML stucture, we were later introduced to CSS and how to it to style elements.</p>
 <hr>
-  <p class="card-subtitle">1.color and images</p>
+  <p class="card-subtitle"> <a href="activities/activities4/colors2.html" target="_blank">1.color and images </a></p>
   <hr>
-    <p class="card-subtitle"> 2.Animation</p>
+    <p class="card-subtitle"> <a href=" activities/activities5/anmation.html" target="_blank">2.Animation </a> </p>
     <hr>
-    <p class="card-subtitle">3.Responsive Webpage</p>
+    <p class="card-subtitle"> <a href="activities/activities6/activity6.html" target="_blank">3.Responsive Webpage </a></p>
     </div>
 </section>
 
@@ -234,17 +234,17 @@
 <!-- card3 for class activity boostrap-->
 
 <section class="card   col-lg-3 col-md-5 "   <p class="card-subtitle"></p>
-  <img src="img.jpg.jpg" alt="image of cat" tilte="Professor Wu " class="card-img">
+  <img src="image/image3.png" alt="image of girl" tilte="girl with laptop" class="card-img">
   <div class="card-header">
   <p class="card-title"><b class="bold1">Bootstrap</b> <br>  <b> Class Activities </b></p>
 
   <p class="card-subtitle"> Bootstrap is the most popular HTML,CSS, and javascrpit framework for developing responsive mobile first websites.</p>
 <hr>
-  <p class="card-subtitle">1.Basic informative Webpage</p>
+  <p class="card-subtitle"> <a href="activities/activities7/activity6-fatema.html " target="_blank">1.Basic informative Webpage </a></p>
   <hr>
-    <p class="card-subtitle"> 2.Carousel/slideshow</p>
+    <p class="card-subtitle"> <a href="activities/activity9/slideshow.html" target="_blank">2.Carousel/slideshow </a></p>
     <hr>
-    <p class="card-subtitle">3.Modal Window in sales</p>
+    <p class="card-subtitle"> <a href="activities/activities10/activity10.html" target="_blank">3.Modal Window in sales </a></p>
     </div>
 </section>
 </div>
@@ -254,8 +254,8 @@
 <!-- footer starting-->
   <footer class="footer row mt-5 p-4 text-white text-center">
 
-<div class="col-lg-3 col-md-6 col-sm-6">
- <p  id="contracts"><b>PHONE NUMBER </b><br>671 345 768</p>
+<div class="col-lg-3 col-md-6 col-sm-6"  id="contract">
+ <p ><b>PHONE NUMBER </b><br>671 345 768</p>
 
 </div>
 
@@ -263,7 +263,7 @@
  <p>EMAIL <br><a href="mailto:ATEMATUN.NUSRAT86@qcc.cuny.edu">Fatematun Nusrat</a> </p>
 </div>
 <div class="col-lg-3 col-md-6 col-sm-6">
- <p>  ADDRESS<br> <a href="#" target="_blank"> 222-05 56th ave,Queens,NY-11432</a></p>
+ <p>  ADDRESS<br> <a href="https://www.qcc.cuny.edu/" target="_blank"> 222-05 56th ave,Queens,NY-11432</a></p>
 </div>
 <div class="col-lg-3 col-md-6 col-sm-6">
  <p> OFFICE <br>Technology Building </p>
@@ -272,10 +272,10 @@
 <!-- social media icon atleast have to have 2 -->
 <div class="social col-lg-6 mt-5">
   <p>Follow Fatema</p>
- <a href="https://www.facebook.com/people/Fatematuj-Nusrat/100054304171544/" target="_blank"><img src="f.png" alt="facebook" width="32px;" </p>   </a>
- <a href="https://www.facebook.com/people/Fatematuj-Nusrat/100054304171544/" target="_blank"><img src="i.png" alt="instragam" width="32px;" </p>   </a>
+ <a href="https://www.facebook.com/QueensboroughCUNY" target="_blank"><img src="image/f.png" alt="facebook" width="32px;" </p>   </a>
+ <a href="https://www.instagram.com/accounts/login/?next=/queensboroughcc_cuny/" target="_blank"><img src="image/i.png" alt="instragam" width="32px;" </p>   </a>
 
- <a href="https://www.facebook.com/people/Fatematuj-Nusrat/100054304171544/" target="_blank"><img src="p.png" alt="printerst" width="32px;" </p>   </a>
+
 </div>
 
 
